erDiagram
    ORGANIZATION ||--o{ API_KEY : owns
    ORGANIZATION ||--o{ COLLECTION : owns
    ORGANIZATION ||--o{ INSTITUTION : owns
    COLLECTION ||--o{ SOURCE : contains
    INSTITUTION o|--o{ SOURCE : identifies
    SOURCE ||--o{ CRAWL_BLUEPRINT : planned_by
    SOURCE ||--o{ RUN : executes
    RUN ||--o{ RUN_ISSUE : reports
    RUN ||--o{ CRAWL_EVENT : emits
    RUN o|--o{ INCIDENT : raises
    SOURCE ||--o{ DOCUMENT : produces
    DOCUMENT ||--o{ DOCUMENT_VERSION : versions
    DOCUMENT_VERSION ||--o{ CHUNK : contains
    EMBEDDING_PROFILE ||--o{ DOCUMENT_INDEX : configures
    DOCUMENT_VERSION ||--o{ DOCUMENT_INDEX : indexed_as
    CHUNK ||--o{ CHUNK_EMBEDDING : embeds
    EMBEDDING_PROFILE ||--o{ CHUNK_EMBEDDING : generates
    DOCUMENT ||--o{ STRUCTURED_RECORD : yields
    INSTITUTION o|--o{ STRUCTURED_RECORD : groups
    STRUCTURED_RECORD ||--o{ STRUCTURED_RECORD_REVISION : snapshots
    STRUCTURED_RECORD ||--o{ COURSE_SHORTLIST_ENTRY : saved_as
    ORGANIZATION ||--o{ CONVERSATION : owns
    CONVERSATION ||--o{ MESSAGE : contains
    CONVERSATION ||--o{ MESSAGE_GENERATION : generates
    RETRIEVAL_RUN o|--o{ MESSAGE_GENERATION : supports
    EMBEDDING_PROFILE ||--o{ RETRIEVAL_RUN : used_by
    EMBEDDING_PROFILE ||--o{ EVALUATION_RUN : evaluated_by
    CONVERSATION o|--o{ ACTION_PROPOSAL : proposes
